# agilex_genesis_demos

./: README.md
scripts/: control_piper.py  hello_genesis.py  multi_piper.py
src/piper_kinematics/: CMakeLists.txt  package.xml
src/piper_kinematics/include/: piper_analytical_ik.hpp  piper_forward_kinematics.hpp  piper_jacobian_ik.hpp
src/piper_kinematics/launch/: piper_ik.launch
src/piper_kinematics/scripts/: fixed_point_draw_cross_and_circle.py
src/piper_kinematics/src/: piper_ik_node.cpp  piper_ik_node_use_yaik.cpp
src/piper_ros/: README(EN).md  README.MD  can_activate.sh
src/piper_ros/src/piper/launch/: my_start_single_piper_rviz.launch  start_single_piper.launch  start_single_piper_ik_rviz.launch  start_single_piper_ik_rviz_nocap.launch  start_single_piper_rviz.launch
src/piper_ros/src/piper/scripts/: piper_ctrl_single_node.py
src/piper_ros/src/piper/scripts/piper_pinocchio/: README.MD  piper_control.py  piper_pinocchio.py
src/piper_ros/src/piper_description/launch/piper_with_gripper/: display_nocap_urdf_ik.launch  display_urdf.launch  display_urdf_ik.launch  my_display_urdf.launch
src/piper_ros/src/piper_description/mujoco_model/: MUJOCO_LOG.TXT  joint_ctrl.py  panda.xml  panda_pid.py  piper_description.xml  scene.xml
src/piper_ros/src/piper_description/rviz/: piper_ctrl.rviz
src/piper_ros/src/piper_description/urdf/: my_piper.urdf  my_piper.xml  my_piper_without_camera.urdf  piper_description_v100.urdf  piper_description_v100_camera.urdf  piper_description_with_camera_left.xacro  piper_description_with_camera_right.xacro  piper_with_scout.urdf
src/piper_ros/src/piper_moveit/: README(EN).md  README.md
src/piper_ros/src/piper_moveit/moveit_ctrl/: CMakeLists.txt  package.xml
src/piper_ros/src/piper_moveit/moveit_ctrl/scripts/: joint_moveit_ctrl.py  joint_moveit_ctrl_server.py
src/piper_ros/src/piper_moveit/moveit_ctrl/srv/: JointMoveitCtrl.srv
src/piper_ros/src/piper_moveit/piper_no_gripper_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/piper_ros/src/piper_moveit/piper_no_gripper_moveit/config/: fake_controllers.yaml  piper_description.srdf  ros_controllers.yaml
src/piper_ros/src/piper_moveit/piper_no_gripper_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/piper_ros/src/piper_moveit/piper_with_gripper_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/piper_ros/src/piper_moveit/piper_with_gripper_moveit/config/: fake_controllers.yaml  gazebo_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  piper_description.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
src/piper_ros/src/piper_moveit/piper_with_gripper_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/piper_ros/src/piper_msgs/: CMakeLists.txt
src/piper_ros/src/piper_msgs/msg/: PiperEulerPose.msg
src/piper_ros/src/piper_msgs/srv/: GoZero.srv  Gripper.srv
src/piper_ros/src/piper_noetic/: CMakeLists.txt  README.MD  package.xml
src/piper_ros/src/piper_sim/: README(EN).md  README.md
src/piper_ros/src/piper_sim/piper_gazebo/: CMakeLists.txt  package.xml
src/piper_ros/src/piper_sim/piper_gazebo/config/: piper_gazebo_control.yaml  piper_no_gripper_gazebo_control.yaml
src/piper_ros/src/piper_sim/piper_gazebo/launch/piper_no_gripper/: piper_no_gripper_gazebo.launch  piper_no_gripper_gazebo_controller.launch  piper_no_gripper_world.launch
src/piper_ros/src/piper_sim/piper_gazebo/launch/piper_with_gripper/: piper_gazebo.launch  piper_gazebo_controller.launch  piper_world.launch
src/piper_ros/src/piper_sim/piper_gazebo/scripts/: joint_states_ctrl.py
src/piper_ros/src/piper_sim/piper_mujoco/: CMakeLists.txt  package.xml
src/piper_ros/src/piper_sim/piper_mujoco/launch/: piper_mujoco.launch  piper_no_gripper_mujoco.launch
src/piper_ros/src/piper_sim/piper_mujoco/scripts/: piper_mujoco_pid.py  piper_mujoco_ros.py  piper_no_gripper_mujoco_ros.py
