<?xml version="1.0"?>
<package format="2">
  <name>piper_kinematics</name>
  <version>0.0.0</version>
  <description>Inverse kinematics solver for Piper robot arm</description>

  <maintainer email="khalillee@todo.todo">khalillee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>piper_msgs</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>piper_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>